2010-12-21  Benjamin Kalman  <kalman@chromium.org>

Reviewed by Darin Adler.

        Shift-End does not select to the end of the line
        https://bugs.webkit.org/show_bug.cgi?id=50610

        Add regression test that shift-end selects to the end of the line for both LTR and RTL text.
        Rebaseline a test which assumed incorrect behaviour of shift-end not selecting to the end of
        the line, but rather moving cursor to the start of the line above.

        * editing/selection/extend-selection-home-end-expected.txt: New baseline.
        * editing/selection/extend-to-line-boundary-expected.txt: Added.
        * editing/selection/extend-to-line-boundary.html: Added.
        * platform/win/editing/selection/extend-selection-home-end-expected.txt: New baseline.
2010-12-21  Benjamin Kalman  <kalman@chromium.org>

        Reviewed by Darin Adler.

        Shift-End does not select to the end of the line
        https://bugs.webkit.org/show_bug.cgi?id=50610

        Let the VisiblePosition affinity for end of line selection to be set by
        visibleEnd/visibleStart rather than using end/start and always using UPSTREAM.

        Test: editing/selection/extend-to-line-boundary.html

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::positionForPlatform): Use visibleStart/visibleEnd rather than
        start/end.
        (WebCore::SelectionController::modifyExtendingForward): Don't explicitly use UPSTREAM affinity.

Canonical link: https://commits.webkit.org/64794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74452 268f45cc-cd09-0410-ab3c-d52691b4dbfc