WebCore/editing/SelectionController.cpp
@@ -302,19 +302,15 @@ TextDirection SelectionController::directionOfEnclosingBlock()
 
 VisiblePosition SelectionController::positionForPlatform(bool isGetStart) const
 {
-    Position pos;
     Settings* settings = m_frame ? m_frame->settings() : 0;
     if (settings && settings->editingBehaviorType() == EditingMacBehavior)
-        pos = isGetStart ? m_selection.start() : m_selection.end();
-    else {
-        // Linux and Windows always extend selections from the extent endpoint.
-        // FIXME: VisibleSelection should be fixed to ensure as an invariant that
-        // base/extent always point to the same nodes as start/end, but which points
-        // to which depends on the value of isBaseFirst. Then this can be changed
-        // to just return m_sel.extent().
-        pos = m_selection.isBaseFirst() ? m_selection.end() : m_selection.start();
-    }
-    return VisiblePosition(pos, m_selection.affinity());
+        return isGetStart ? m_selection.visibleStart() : m_selection.visibleEnd();
+    // Linux and Windows always extend selections from the extent endpoint.
+    // FIXME: VisibleSelection should be fixed to ensure as an invariant that
+    // base/extent always point to the same nodes as start/end, but which points
+    // to which depends on the value of isBaseFirst. Then this can be changed
+    // to just return m_sel.extent().
+    return m_selection.isBaseFirst() ? m_selection.visibleEnd() : m_selection.visibleStart();
 }
 
 VisiblePosition SelectionController::startForPlatform() const
@@ -385,9 +381,7 @@ VisiblePosition SelectionController::modifyExtendingForward(TextGranularity gran
         pos = endOfSentence(endForPlatform());
         break;
     case LineBoundary:
-        pos = endForPlatform();
-        pos.setAffinity(UPSTREAM);
-        pos = logicalEndOfLine(pos);
+        pos = logicalEndOfLine(endForPlatform());
         break;
     case ParagraphBoundary:
         pos = endOfParagraph(endForPlatform());
